Fix mobile layout issues

--- a/react-gym-form/src/index.css
+++ b/react-gym-form/src/index.css
@@ -8,11 +8,10 @@
 body{
     font-family:system-ui, sans-serif;
     background-color: rgb(20, 20, 20);
-    background-image: url("background2.jpg");
+    background-image: url("fondos/background2.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    color: yellow;
 }
 
 .fondo{
@@ -29,36 +28,48 @@ body{
 h1{
     position: relative;
     text-align: center;
-    font-size: 60px;
-    margin-bottom: 1vw;
+    font-size: clamp(2rem, 4.5vw, 5rem);
+    font-family: Garp-Sans;
+    letter-spacing: 3px;
+    padding-top: 3vh;
+    margin-bottom: 1vh;
     z-index: 1;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    color: rgba(235, 235, 0);
+}
+
+h1>span{
+    color: #f6efe8;
 }
 
 .container{
     position: relative;
     display: flex;
     flex-direction: column;
-    max-width: 7200px;
+    max-width: 1900px;
     gap: 2rem;
-    padding: 1rem;
+    padding: 1vw;
     z-index: 1;
 }
 
 .card{
     flex: 1;
-    width: 60%;
+    width: clamp(450px, 60%, 1200px);
     align-self: center;
-    padding: 1rem;
+    padding: min(2.5rem, 5%);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
     color: #f6efe8;
 }
 
 #subscriptionForm{
     background-color: rgb(25, 25, 25);
+    font-size: clamp(12px, 1.5vw, 17px);
 }
 
 #subscriptionForm h2{
     margin-bottom: 1rem;
+    font-size: clamp(20px, 4vw, 25px);
+    color: rgb(200, 200, 200);
 }
 
 #subscriptions{
@@ -69,17 +80,28 @@ h1{
     margin-bottom: 0.5rem;
     padding: 0.5rem;
     border-width: medium;
-    border-color: #ffb84d;
-    box-shadow: 0 0 7px #ffb84d;
+    border: none;
     overflow-x: hidden;
     min-width: 200px;
+    position: relative;
 }
 
-.card legend{
+.card legend::before{
+    content: "";
+    top: 0.8rem;
+    left: 0;
+    right: 0;
+    height: 2px;
+    background-color: #ffb84d;
+    box-shadow: 0 -1px 7px #ffb84d;
+}
+
+#subscriptionForm fieldset>legend{
     margin-bottom: 0.5rem;
-    font-size: large;
+    font-size: clamp(16px, 2vw, 20px);
+    background-color: rgb(25, 25, 25);
+    color: rgb(150, 150, 150);
 }
-
 
 #clientForm .fieldsetRow{
     display: flex;
@@ -95,12 +117,23 @@ h1{
     gap: 0.5rem;
 }
 
-#clientForm input{
-    background-color: #f6efe8;
+#clientForm .field{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+#clientForm input, #clientForm select{
+    background-color: transparent;
     border-color: transparent;
-    border-radius: 5px;
-    color: rgb(52, 52, 0);
-    transition: transform 0.4s ease, border-radius 0.4s ease, box-shadow 0.4s ease;
+    border-bottom-color: rgb(150, 150, 150);
+    color: #f6efe8;
+    padding: 0.2%;
+    transition: transform 0.4s ease;
+}
+
+#clientForm input::placeholder{
+    color: #f6efe8ac;
 }
 
 #clientForm .period input{
@@ -112,30 +145,13 @@ h1{
 }
 
 #clientForm input:hover:not(:read-only), #clientForm input:focus:not(:read-only){
-    transform: scale(1.1);
-    border-radius: 10px;
-    box-shadow: 0 0 10px #ffb84d;
-}
-
-#clientForm select{
-    background-color: #f6efe8;
-    border-color: transparent;
-    color: rgb(52, 52, 0);
-    transition: transform 0.4s ease, border-radius 0.4s ease, box-shadow 0.4s ease;
+    transform: scale(1.04);
+    border-bottom-color: rgb(200, 200, 200);
 }
 
 #clientForm select:hover, #clientForm select:focus{
-    transform: scale(1.1);
-    border-radius: 10px;
-    box-shadow: 0 0 10px #ffb84d;
-}
-
-#personalData input, #subscriptionDetails input{
-    margin-left: 1rem;
-}
-
-#personalData select, #subscriptionDetails select{
-    margin-left: 1rem;
+    transform: scale(1.04);
+    border-bottom-color: rgb(200, 200, 200);
 }
 
 #clientForm .check input{
@@ -145,12 +161,12 @@ h1{
 
 #submit{
     margin-top: 1%;
-    padding: 1.2%;
+    padding: clamp(5px, 1.2%, 8px);
     background-color: darkslategray; /*#2f2f1f*/
     border-color: transparent;
     color: #f5f4ec; /*#fafbf3*/
     font-family:Lucida Sans;
-    font-size: larger;
+    font-size: clamp(16px, 2vw, 20px);
     border-radius: 10px;
     box-shadow: 0 0 7px rgb(0, 0, 0, 0.25);
     transition: background-color 0.4s ease, color 0.4s ease, box-shadow 0.4s ease, transform 0.4s ease;
@@ -204,35 +220,110 @@ h1{
     color: aliceblue;
 }
 
-@media (max-width: 600px){
+.cName{
+    font-weight: bold;
+}
+
+
+#clientName{
+    width: 60%;
+}
+
+#email{
+    width: 40%;
+}
+
+#ladaCountry{
+    width: 30%;
+}
+
+#phone{
+    width: 35%;
+}
+
+#age{
+    width: 3rem;
+    text-align: center;
+}
+
+
+@media (max-width: 500px){
     .card{
-        width: 95%;
+        width: clamp(240px, 90%, 350px);
     }
-    .fieldsetRow{
+
+    .fieldsetRow, #clientForm .field{
         flex-direction: column;
-    }
-    h1{
-        font-size: xx-large;
-    }
-
-    #clientForm input:hover:not(:read-only), #clientForm input:focus:not(:read-only){
-        transform: scale(1.02);
-        border-radius: 10px;
-        box-shadow: 0 0 10px #ffb84d;
-    }
-
-    #clientForm select:hover, #clientForm select:focus{
-        transform: scale(1.02);
-        border-radius: 10px;
-        box-shadow: 0 0 10px #ffb84d;
+        gap: 0rem;
     }
 
     #subscriptions #clientList>ul>li{
         width: 100%;
         flex-direction: column;
     }
+
     #subscriptions #clientList>ul>li>span{
-        font-size: 0.9rem;
+        font-size: 0.85rem;
         width:100%;
     }
+
+    #clientName{
+        width: 100%;
+    }
+
+    #email{
+        width: 100%;
+    }
+
+    #ladaCountry{
+        width: 35%;
+    }
+
+    #birthday{
+        width: 60%;
+    }
+    
+    #phone{
+        width: 65%;
+    }
+
+    #plan{
+        width: 60%;
+    }
+
+    body{
+        background-image: url("fondos/min-background2.jpg");
+        background-size: cover;
+    }
+    
+}
+
+@font-face {
+    font-family: Monster-Beast;
+    src: url(fuentes/MonsterBeast.otf);
+}
+
+@font-face {
+    font-family: Sportize;
+    src: url(fuentes/Sportize.ttf);
+}
+
+@font-face {
+    font-family: Sportize-Light;
+    src: url(fuentes/Sportize-Light.ttf);
+}
+
+@font-face {
+    font-family: Sportize-Bold;
+    src: url(fuentes/Sportize-SemiBold.ttf);
+}
+
+@font-face {
+    font-family: Jumpshot;
+    src: url(fuentes/JUMPSHOT.ttf);
+}
+
+@font-face {
+    font-family: Garp-Sans;
+    src: url(fuentes/GarpSans-Normal.otf);
 }
